Add synchronized simulator function for cases that computers cannot run at wall clock due to hardware limitations

--- a/AIFS_ROS/hiperlab_rostools/CMakeLists.txt
+++ b/AIFS_ROS/hiperlab_rostools/CMakeLists.txt
@@ -236,6 +236,10 @@ add_executable(quad_rappids_planner_controller
 target_link_libraries(quad_rappids_planner_controller ${catkin_LIBRARIES} ${OpenCV_LIBS} ${Boost_LIBRARIES})
 add_dependencies(quad_rappids_planner_controller ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
+add_executable(sync_simulator src/SyncSimulator/main.cpp)
+target_link_libraries(sync_simulator ${catkin_LIBRARIES} ${OpenCV_LIBS} ${Boost_LIBRARIES} AirLib MavLinkCom)
+add_dependencies(sync_simulator ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+
 add_executable(vehicle_monitor 
     src/VehicleMonitor/main.cpp
     src/VehicleMonitor/VehicleMonitor.cpp
