--- a/AIFS_ROS/hiperlab_rostools/CMakeLists.txt
+++ b/AIFS_ROS/hiperlab_rostools/CMakeLists.txt
@@ -44,7 +44,7 @@ include_directories(${EIGEN3_INCLUDE_DIR})
 #message(STATUS "Found OpenCV at ${OpenCV_INCLUDE_DIRS}")
 #target_link_libraries(my_awesome_library ${OpenCV_LIBRARIES})
 
-find_package(OpenCV 3 REQUIRED)
+find_package(OpenCV REQUIRED)
 message(STATUS "Found OpenCV at ${OpenCV_INCLUDE_DIRS}")
 include_directories(${OpenCV_INCLUDE_DIRS})
 
