--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "AIFS_AirSim"]
 	path = AIFS_AirSim
-	url = git@github.com:muellerlab/AIFS_AirSim.git
+	url = git@github.com:muellerlab/AIFS_AirSim_Release.git
