1. Add GPS ros message publisher in simulator nodes 2. Delete UWB message publisher 3. Add GPS state estimator 4. Make PredictionPipe a standalone file so it can be easily used for both estimators

--- a/AIFS_ROS/hiperlab_rostools/CMakeLists.txt
+++ b/AIFS_ROS/hiperlab_rostools/CMakeLists.txt
@@ -115,7 +115,8 @@ include_directories(
 add_message_files(
   FILES
 	estimator_output.msg
-	mocap_output.msg  
+  gps_output.msg
+	mocap_output.msg
 	simulator_truth.msg
 	radio_command.msg
 	telemetry.msg
