--- a/AIFS_ROS/hiperlab_rostools/CMakeLists.txt
+++ b/AIFS_ROS/hiperlab_rostools/CMakeLists.txt
@@ -116,6 +116,7 @@ add_message_files(
   FILES
 	estimator_output.msg
   gps_output.msg
+  imu_output.msg
 	mocap_output.msg
 	simulator_truth.msg
 	radio_command.msg
